# restplaywright

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
RestPlaywright/: main.py
RestPlaywright/prompts/: prompt_codegen.txt  prompt_globalsetup.txt
RestPlaywright/utils/: latest_swagger_file.py  llm.py  llm_processor.py  llm_processor_bkp.py  playwright_config_updater.py  playwright_setup.py  swagger.py  swagger_extractor.py  swagger_to_readme.py
Swagger/: main.py  requirements.txt
Swagger/utils/: llm.py  llm_processor.py  playwright_setup.py  swagger.py
utils/: llm_processor.py  playwright_setup.py  swagger_extractor.py
