[project]
name = "playwright-Api-codegen"
version = "0.1.0"
description = "code to demo Wheel file."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "openapi-schema-pydantic",
    "python-dotenv",
    "prance",
    "openapi-spec-validator",
    "jsonref",
    "langchain>=0.2.0",
    "langchain-google-genai>=0.1.0",
    "langchain-community",
    "openai",
    "setuptools>=61.0",
    "wheel",
    "build"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.scripts]
playwright-Api-codegen = "RestPlaywright.main:main"
